@@ -1,3 +1,9 @@
+2011-01-19 Alexandre Ferrieux  <ferrieux@users.sourceforge.net>
+
+	* generic/tclExecute.c: Backport of Miguel's 2010-09-22 fix on 8.6
+	branch (decache stack info wherever ::errorInfo may be updated,
+	for trace sanity). [Bug 3138178]
+
 2011-01-19  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* tools/genStubs.tcl:       Make sure to use CONST/VOID in stead of
